fix(text-fields): remove spacing and icon - INNO-1192 (#796)

--- a/src/systems/generic/implementations/vanilla/generic-component-form-feedback-message/generic-component-form-feedback-message.scss
+++ b/src/systems/generic/implementations/vanilla/generic-component-form-feedback-message/generic-component-form-feedback-message.scss
@@ -16,10 +16,4 @@
     margin: 0;
     padding: 0;
   }
-
-  .ecl-feedback-message__logo {
-    height: $ecl-font-size-m * $ecl-line-height-prolonged-m;
-    margin-right: $ecl-spacing-s;
-    width: $ecl-font-size-m * $ecl-line-height-prolonged-m;
-  }
 }
